--- a/i3/status.toml
+++ b/i3/status.toml
@@ -17,13 +17,8 @@ show = "both"
 
 [[block]]
 block = "weather"
-format = "{location}  {temp}°C"
+format = "{location}  {weather}  {temp}°C"
 service = { name = "openweathermap", api_key = "f6e51446b17c5dd5200a424876a03550", city_id = "1850144", units = "metric" }
-
-[[block]]
-block = "weather"
-format = "{location}  {temp}°C"
-service = { name = "openweathermap", api_key = "f6e51446b17c5dd5200a424876a03550", city_id = "683506", units = "metric" }
 
 [[block]]
 block = "sound"
