--- a/i3/config
+++ b/i3/config
@@ -32,13 +32,14 @@ set $mod Mod4
 floating_modifier $mod
 
 # Start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec termite
 
 # Kill focused window
 bindsym $mod+Shift+q kill
 
 # Start rofi (a program launcher)
 bindsym $mod+d exec --no-startup-id "rofi -combi-modi drun,run -show combi"
+bindsym $mod+Shift+d exec --no-startup-id "rofi -combi-modi window,run -show combi"
 
 # Lock screen
 bindsym $mod+l exec --no-startup-id "i3lock -c 000000 -u"
