--- a/i3/i3status_rust/status.toml
+++ b/i3/i3status_rust/status.toml
@@ -2,6 +2,10 @@ theme = "slick"
 icons = "awesome"
 
 [[block]]
+block = "focused_window"
+max_width = 21
+
+[[block]]
 block = "music"
 player = "spotify"
 buttons = ["play", "next"]
