--- a/i3/i3status_rust/status.toml
+++ b/i3/i3status_rust/status.toml
@@ -2,8 +2,10 @@ theme = "slick"
 icons = "awesome"
 
 [[block]]
-block = "focused_window"
-max_width = 21
+block = "net"
+device = "wlp3s0"
+ssid = true
+interval = 5
 
 [[block]]
 block = "music"
@@ -11,9 +13,15 @@ player = "spotify"
 buttons = ["play", "next"]
 
 [[block]]
-block = "battery"
-interval = 60
-show = "percentage"
+block = "nvidia_gpu"
+show_memory = false
+interval = 5
+
+[[block]]
+block = "temperature"
+collapsed = false
+interval = 10
+format = "{average}°"
 
 [[block]]
 block = "weather"
@@ -26,4 +34,9 @@ block = "sound"
 [[block]]
 block = "time"
 interval = 60
-format = "%a %d/%m %R"
+format = "%a %m/%d %R"
+
+[[block]]
+block = "battery"
+interval = 60
+show = "percentage"
