--- a/i3/i3status_rust/status.toml
+++ b/i3/i3status_rust/status.toml
@@ -27,6 +27,7 @@ format = "{average}°"
 block = "weather"
 format = "{location}  {weather}  {temp}°C"
 service = { name = "openweathermap", api_key = "f6e51446b17c5dd5200a424876a03550", city_id = "1850144", units = "metric" }
+interval = 1800
 
 [[block]]
 block = "sound"
