--- a/i3/config
+++ b/i3/config
@@ -49,7 +49,13 @@ bindsym $mod+d exec --no-startup-id "rofi -combi-modi drun,run -show combi"
 bindsym $mod+Shift+d exec --no-startup-id "rofi -combi-modi window,run -show combi"
 
 # Lock screen
-bindsym $mod+l exec --no-startup-id "i3lock -c 000000 -u"
+bindsym $mod+Shift+l exec --no-startup-id "i3lock -c 000000 -u"
+
+# Enter sleep mode
+bindsym $mod+Shift+s exec --no-startup-id "systemctl suspend"
+
+# Power off
+bindsym $mod+Shift+p exec --no-startup-id "poweroff"
 
 # Screen brightness control
 bindsym XF86MonBrightnessUp exec xbacklight -inc 20
