--- a/i3/config
+++ b/i3/config
@@ -57,6 +57,9 @@ bindsym $mod+Shift+s exec --no-startup-id "systemctl suspend"
 # Power off
 bindsym $mod+Shift+p exec --no-startup-id "poweroff"
 
+# Exit i3
+bindsym $mod+Shift+e exec --no-startup-id "i3-msg exit"
+
 # Screen brightness control
 bindsym XF86MonBrightnessUp exec xbacklight -inc 20
 bindsym XF86MonBrightnessDown exec xbacklight -dec 20
