--- a/i3/polybar/config
+++ b/i3/polybar/config
@@ -142,7 +142,7 @@ format = <label-state> <label-mode>
 index-sort = true
 wrapping-scroll = false
 
-enable-click = false
+enable-click = true
 enable-scroll = false
 
 ; Only show workspaces on the same output as the bar
