Fix the starting of the GPG agent.

--- a/i3/config
+++ b/i3/config
@@ -206,7 +206,5 @@ exec --no-startup-id xset dpms 600 600 600                   # Turn off the scre
 exec --no-startup-id xset b off                              # Disable annoying beeps
 exec --no-startup-id dunst -config $DUNST_CONFIG             # Start the launch menu
 exec --no-startup-id feh --bg-scale $WALLPAPER_PATH          # Set up the wallpaper
-
-exec --no-startup-id gpg-connect-agent updatestartuptty /bye # Start the GPG agent
-exec --no-startup-id gpg-agent --daemon --enable-ssh-support
+exec --no-startup-id gpg-agent --daemon --enable-ssh-support # Start the GPG agent
 
