--- a/i3/config
+++ b/i3/config
@@ -51,7 +51,7 @@ bindsym $mod+d exec --no-startup-id "rofi -combi-modi drun,run -show combi"
 bindsym $mod+Shift+d exec --no-startup-id "rofi -combi-modi window,run -show combi"
 
 # Lock screen
-bindsym $mod+Shift+l exec --no-startup-id "i3lock -f"
+bindsym $mod+Shift+o exec --no-startup-id "i3lock -f"
 
 # Enter sleep mode
 bindsym $mod+Shift+s exec --no-startup-id "systemctl suspend"
@@ -72,19 +72,19 @@ bindsym XF86AudioLowerVolume exec --no-startup-id amixer sset Master 5%- unmute
 bindsym XF86AudioMute exec --no-startup-id amixer sset Master toggle
 
 # Change focus
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
 # Move focused window
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
 # Split in horizontal orientation
-bindsym $mod+h split h
+bindsym $mod+o split h
 
 # Split in vertical orientation
 bindsym $mod+v split v
@@ -135,17 +135,18 @@ bindsym $mod+Shift+8 move container to workspace $WORKSPACE8
 bindsym $mod+Shift+9 move container to workspace $WORKSPACE9
 bindsym $mod+Shift+0 move container to workspace $WORKSPACE0
 
-bindsym $mod+Control+Left move workspace to output left
-bindsym $mod+Control+Up move workspace to output up
-bindsym $mod+Control+Down move workspace to output down
-bindsym $mod+Control+Right move workspace to output right
+bindsym $mod+Control+h move workspace to output left
+bindsym $mod+Control+k move workspace to output up
+bindsym $mod+Control+j move workspace to output down
+bindsym $mod+Control+l move workspace to output right
 
 # Resize window (you can also use the mouse for that)
 mode "resize" {
     # These bindings trigger as soon as you enter the resize mode
-    bindsym j resize shrink width 5 px or 5 ppt
+    bindsym h resize grow width 5 px or 5 ppt
+    bindsym j resize shrink height 5 px or 5 ppt
     bindsym k resize grow height 5 px or 5 ppt
-    bindsym l resize shrink height 5 px or 5 ppt
+    bindsym l resize shrink width 5 px or 5 ppt
     bindsym semicolon resize grow width 5 px or 5 ppt
 
     # Same bindings, but for the arrow keys
@@ -169,7 +170,7 @@ bindsym $mod+Shift+r exec "i3-msg restart; $POLYBAR_LAUNCH"
 
 # Reconfigure screen for different environments
 bindsym $mod+Shift+w exec "$HOME/.i3/scripts/randr work"
-bindsym $mod+Shift+h exec "$HOME/.i3/scripts/randr home"
+bindsym $mod+Shift+m exec "$HOME/.i3/scripts/randr home"
 bindsym $mod+Shift+a exec "$HOME/.i3/scripts/randr auto"
 
 # Window appearance
