--- a/i3/config
+++ b/i3/config
@@ -143,17 +143,10 @@ bindsym $mod+Control+l move workspace to output right
 # Resize window (you can also use the mouse for that)
 mode "resize" {
     # These bindings trigger as soon as you enter the resize mode
-    bindsym h resize grow width 5 px or 5 ppt
-    bindsym j resize shrink height 5 px or 5 ppt
+    bindsym h resize shrink width 5 px or 5 ppt
     bindsym k resize grow height 5 px or 5 ppt
-    bindsym l resize shrink width 5 px or 5 ppt
-    bindsym semicolon resize grow width 5 px or 5 ppt
-
-    # Same bindings, but for the arrow keys
-    bindsym Left resize shrink width 5 px or 5 ppt
-    bindsym Down resize grow height 5 px or 5 ppt
-    bindsym Up resize shrink height 5 px or 5 ppt
-    bindsym Right resize grow width 5 px or 5 ppt
+    bindsym j resize shrink height 5 px or 5 ppt
+    bindsym l resize grow width 5 px or 5 ppt
 
     # Back to normal: Enter or Escape
     bindsym Return mode "default"
