Configure feh to use --bg-fill.

--- a/i3/config
+++ b/i3/config
@@ -200,7 +200,7 @@ exec --no-startup-id nm-applet                               # Start the network
 exec --no-startup-id fcitx                                   # Start the input mode
 exec --no-startup-id blueman-applet                          # Start the bluetooth applet
 exec --no-startup-id dunst -config $DUNST_CONFIG             # Start the launch menu
-exec --no-startup-id feh --bg-scale $WALLPAPER_PATH          # Set up the wallpaper
+exec --no-startup-id feh --bg-fill $WALLPAPER_PATH          # Set up the wallpaper
 exec --no-startup-id gpg-agent --daemon --enable-ssh-support # Start the GPG agent
 exec --no-startup-id redshift                                # Start the Redshift agent
 
