--- a/i3/config
+++ b/i3/config
@@ -54,6 +54,9 @@ bindsym $mod+Shift+d exec --no-startup-id "rofi -combi-modi window,run -show com
 # Lock screen
 bindsym $mod+Shift+o exec --no-startup-id "$SCREEN_LOCK_PATH"
 
+# Print screen
+bindsym Print exec --no-startup-id gscreenshot
+
 # Enter sleep mode
 bindsym $mod+Shift+s exec --no-startup-id "systemctl suspend"
 
