--- a/i3/bumblebee_status/bumblebee-status.conf
+++ b/i3/bumblebee_status/bumblebee-status.conf
@@ -2,4 +2,4 @@
 datetime.format = %a %m/%d %H:%M
 memory.format = {percent:05.02f}%
 weather.apikey = f6e51446b17c5dd5200a424876a03550
-weather.location = Tokyo
+weather.location = Tokyo,Bucharest
