--- a/i3/bumblebee_status/bumblebee-status.conf
+++ b/i3/bumblebee_status/bumblebee-status.conf
@@ -3,3 +3,7 @@ datetime.format = %a %m/%d %H:%M
 memory.format = {percent:05.02f}%
 weather.apikey = f6e51446b17c5dd5200a424876a03550
 weather.location = Tokyo,Bucharest
+sensors2.chip = coretemp-isa-0000
+sensors2.showcpu = false
+sensors2.showname = false
+sensors2.showfan = true
