Add configuration for aerlive.

--- a/i3/bumblebee_status/bumblebee-status.conf
+++ b/i3/bumblebee_status/bumblebee-status.conf
@@ -1,6 +1,9 @@
 [module-parameters]
 datetime.format = %a %m/%d %H:%M
 memory.format = {percent:05.02f}%
+aerlive.apikey = d09668ea-def5-44ea-8c77-ae32e9fa5572
+aerlive.unit = ica
+aerlive.city = BUC
 weather.apikey = f6e51446b17c5dd5200a424876a03550
 weather.location = Tokyo,Bucharest
 sensors2.chip = coretemp-isa-0000
