--- a/i3/bumblebee_status/bumblebee-status.conf
+++ b/i3/bumblebee_status/bumblebee-status.conf
@@ -4,7 +4,7 @@ memory.format = {percent:05.02f}%
 aerlive.unit = ica
 aerlive.city = BUC
 weather.apikey = f6e51446b17c5dd5200a424876a03550
-weather.location = Tokyo,Bucharest
+weather.location = Bucharest,Tokyo
 sensors2.chip = coretemp-isa-0000
 sensors2.showcpu = false
 sensors2.showname = false
